RM-8601 Update aXe version to v4.8.1

--- a/Remotion/Web/Development.WebTesting.TestSite.Shared/Accessibility/FormElementWithoutLabelAndImageWithoutAltAndWithoutDocumentTitle.html
+++ b/Remotion/Web/Development.WebTesting.TestSite.Shared/Accessibility/FormElementWithoutLabelAndImageWithoutAltAndWithoutDocumentTitle.html
@@ -20,6 +20,7 @@
   <meta charset="utf-8" />
 </head>
 <body id="input">
+  <img src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" width="0" height="0" />
   <input id="input" name="test" type="text"/>
 </body>
 </html>
