RM-8968 Fix scrolling for inline validation messages

--- a/Remotion/ObjectBinding/Web.Test/IFrameContainer.html
+++ b/Remotion/ObjectBinding/Web.Test/IFrameContainer.html
@@ -41,8 +41,10 @@
   </style>
 
 </head>
-<body>
-Foo
+<body style="border: 1px solid red">
+<p>
+  Sample text to make it clearer if the parent frame scrolled
+</p>
 <div style="height:80%; width:80%; border:1px solid red">
 <iframe 
 width="100%"
@@ -50,6 +52,18 @@ height="100%"
 src="IndividualControlTest.wxe?UserControl=BocAutoCompleteReferenceValueUserControl.ascx&WxeReturnToSelf=True&TabbedMenuSelection=IndividualControlTests,BocAutoCompleteReferenceValue">
 </iframe>
 </div>
-Bar
+<p>Content at the end to cause the body to overflow</p>
+<p>Content at the end to cause the body to overflow</p>
+<p>Content at the end to cause the body to overflow</p>
+<p>Content at the end to cause the body to overflow</p>
+<p>Content at the end to cause the body to overflow</p>
+<p>Content at the end to cause the body to overflow</p>
+<p>Content at the end to cause the body to overflow</p>
+<p>Content at the end to cause the body to overflow</p>
+<p>Content at the end to cause the body to overflow</p>
+<p>Content at the end to cause the body to overflow</p>
+<p>Content at the end to cause the body to overflow</p>
+<p>Content at the end to cause the body to overflow</p>
+<p>Content at the end to cause the body to overflow</p>
 </body>
 </html>
