RM-7630 Collate JavaScript files from Web.ClientScript to a single file

--- a/Remotion/Web/Test.Shared/UtilitiesTest.htm
+++ b/Remotion/Web/Test.Shared/UtilitiesTest.htm
@@ -18,7 +18,7 @@
 <html>
 <head>
 <title>Utilities Test</title>
-<script type="text/javascript" src="res/Remotion.Web/Html/Utilities.js"></script>
+<script type="text/javascript" src="/res/Remotion.Web/Html/Remotion.Web.ClientScript.js"></script>
 </head>
 <body>
 <h1>Utilities Test</h1>
